// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`const: expression from another constant > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "SIZE",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 8,
      },
    ],
    "instruction": "const",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "HALF",
      },
      {
        "type": "identifier",
        "value": "SIZE/2",
      },
    ],
    "instruction": "const",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "HALF",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 7,
  },
]
`;

exports[`const: expression from another constant > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 4
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`const: expression from another constant > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`init: constant expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "SIZE",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 8,
      },
    ],
    "instruction": "const",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "foo",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "foo",
      },
      {
        "type": "identifier",
        "value": "SIZE/2",
      },
    ],
    "instruction": "init",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "foo",
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 8,
  },
]
`;

exports[`init: constant expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    i32.load
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`init: constant expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "foo": {
    "byteAddress": 0,
    "default": 4,
    "elementWordSize": 4,
    "id": "foo",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`int[]: buffer size from constant division expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "SIZE",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 8,
      },
    ],
    "instruction": "const",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "buffer",
      },
      {
        "type": "identifier",
        "value": "SIZE/2",
      },
    ],
    "instruction": "int[]",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "$buffer",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 7,
  },
]
`;

exports[`int[]: buffer size from constant division expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 16
    i32.const 4
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int[]: buffer size from constant division expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "buffer": {
    "byteAddress": 0,
    "default": {},
    "elementWordSize": 4,
    "id": "buffer",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 4,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 4,
  },
  "output": {
    "byteAddress": 16,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 4,
    "wordAlignedSize": 1,
  },
}
`;

exports[`int[]: buffer size from constant multiplication expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "SIZE",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 8,
      },
    ],
    "instruction": "const",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "buffer",
      },
      {
        "type": "identifier",
        "value": "SIZE*2",
      },
    ],
    "instruction": "int[]",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "$buffer",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 7,
  },
]
`;

exports[`int[]: buffer size from constant multiplication expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 64
    i32.const 16
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`int[]: buffer size from constant multiplication expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "buffer": {
    "byteAddress": 0,
    "default": {},
    "elementWordSize": 4,
    "id": "buffer",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 16,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 16,
  },
  "output": {
    "byteAddress": 64,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 16,
    "wordAlignedSize": 1,
  },
}
`;

exports[`push: constant expression > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "SIZE",
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 8,
      },
    ],
    "instruction": "const",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "SIZE/2",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 6,
  },
]
`;

exports[`push: constant expression > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 0
    i32.const 4
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`push: constant expression > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "output": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;
